--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
 		"php": ">=7.0",
         "ext-swoole": ">=2.1",
-		"illuminate/database": "^5.7",
+		"illuminate/database": "^5.7"
 	},
 	 "autoload": {
         "psr-4": {
